deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alihm-svc
spec:
  selector:
    name: alihm
    app: nginx
  ports:
   - port: 80
     targetPort: 80
     protocol: TCP
